NVSHAS-9670: Plain text response double quotes issue and java unnamed library issue in sbt run.